<resources>    <string name="app_name">StarWar</string>    <string name="starwar_character_finder">StarWar Character Finder</string>    <string name="please_enter_a_character_name">Character name</string>    <string name="character_birth_date_is">Birth Date: %1s</string>    <string name="character_species_name_is">Species: %1s</string>    <string name="character_height_is">%1s cm | %2s ft | %3s in</string>    <string name="planet_population_is">%1s</string>    <string name="planet_language_is">Language: %1s</string>    <string name="character_planet_name_is">%1s</string>    <string name="species">Species :</string>    <string name="movies">Movies</string>    <string name="movie_title_is">Title : %1s</string>    <string name="movie_release_date_is">Release date: %1s</string>    <string name="movie_opening_is">Opening crawl: %1s</string>    <string name="logo">logo</string>    <string name="search">search</string>    <string name="back">back</string>    <string name="birth_date">Birth Date:</string>    <string name="height">Height:</string>    <string name="planet">Planet:</string>    <string name="population">Population:</string>    <string name="language">Language:</string>    <string name="homeWorld">HomeWorld:</string>    <string name="retry">Retry</string>    <string name="some_errors_while_fetching_data">Some errors while fetching data</string>    <string name="no_character_found">No Character found</string></resources>