<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_main_background">


    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/txt_margin_top"
        android:gravity="center"
        android:text="@string/starwar_character_finder"
        android:textColor="@color/primaryColor"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearSearchName"
        android:layout_width="0dp"
        android:layout_height="@dimen/home_view_dimension"
        android:layout_marginStart="@dimen/view_margin"
        android:layout_marginTop="@dimen/search_layout_margin_top"
        android:layout_marginEnd="@dimen/view_margin"
        android:background="@drawable/search_edittext_back"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle">


        <EditText
            android:id="@+id/edtSearchName"
            android:layout_width="0dp"
            android:layout_height="@dimen/home_view_dimension"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/please_enter_a_character_name"
            android:imeOptions="actionSearch"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/search_name_padding"
            android:paddingEnd="@dimen/search_name_padding"
            android:textColor="@color/transparentLightBlueColor"
            android:textColorHint="@color/transparentLightBlueColor" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="@dimen/progress_dimensions"
            android:layout_height="@dimen/progress_dimensions"
            android:layout_gravity="center"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/imgSearch"
            android:layout_width="@dimen/home_view_dimension"
            android:layout_height="@dimen/home_view_dimension"
            android:contentDescription="@string/search"
            android:background="?selectableItemBackground"
            android:padding="@dimen/image_search_padding"
            android:src="@drawable/ic_search" />

    </LinearLayout>


    <include android:id="@+id/error_layout"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearSearchName"
        layout="@layout/error_layout"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/recycler_margin_top"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearSearchName"/>

</androidx.constraintlayout.widget.ConstraintLayout>