<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_main_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_margin"
            android:layout_marginTop="@dimen/view_margin"
            android:layout_marginEnd="@dimen/view_margin"
            android:textColor="@android:color/white"
            android:textSize="@dimen/medium_double_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressDetails"
            android:layout_width="@dimen/view_dimension"
            android:layout_height="@dimen/view_dimension"
            android:layout_marginTop="@dimen/view_margin"
            android:layout_marginRight="@dimen/view_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="@dimen/view_margin_top"
            android:id="@+id/constraintDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_margin"
            android:layout_marginEnd="@dimen/view_margin"
            android:layout_marginBottom="@dimen/view_margin_bottom"
            android:background="@drawable/search_item_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtName">


            <TextView
                android:id="@+id/txtBirthDateHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/view_margin"
                android:layout_marginTop="@dimen/view_margin_bottom"
                android:text="@string/birth_date"
                android:textColor="@android:color/black"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintEnd_toStartOf="@id/txtBirthDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtBirthDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/view_margin_left"
                android:layout_marginTop="@dimen/view_margin_bottom"
                android:layout_marginRight="@dimen/view_margin_top"
                android:textColor="@android:color/black"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txtBirthDateHolder"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtHeightHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/view_margin"
                android:layout_marginTop="@dimen/view_margin_left"
                android:text="@string/height"
                android:textColor="@android:color/black"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintEnd_toStartOf="@id/txtHeight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtBirthDate" />

            <TextView
                android:id="@+id/txtHeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/view_margin_left"
                android:layout_marginTop="@dimen/view_margin_left"
                android:layout_marginRight="@dimen/view_margin_top"
                android:textColor="@android:color/black"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txtHeightHolder"
                app:layout_constraintTop_toBottomOf="@id/txtBirthDate" />

            <TextView
                android:id="@+id/txtPlanetHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/view_margin"
                android:layout_marginTop="@dimen/view_margin_left"
                android:text="@string/planet"
                android:textColor="@android:color/black"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintEnd_toStartOf="@id/txtPlanet"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtHeight" />

            <TextView
                android:id="@+id/txtPlanet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/view_margin_left"
                android:layout_marginTop="@dimen/view_margin_left"
                android:layout_marginRight="@dimen/view_margin_top"
                android:textColor="@android:color/black"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txtPlanetHolder"
                app:layout_constraintTop_toBottomOf="@id/txtHeight" />

            <TextView
                android:id="@+id/txtPopulationHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/view_margin"
                android:layout_marginTop="@dimen/view_margin_left"
                android:text="@string/population"
                android:textColor="@android:color/black"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintEnd_toStartOf="@id/txtPopulation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtPlanet" />

            <TextView
                android:id="@+id/txtPopulation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/view_margin_left"
                android:layout_marginTop="@dimen/view_margin_left"
                android:layout_marginRight="@dimen/view_margin_top"
                android:textColor="@android:color/black"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txtPopulationHolder"
                app:layout_constraintTop_toBottomOf="@id/txtPlanet" />

            <View
                android:id="@+id/viewDivider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_margin="@dimen/view_margin_bottom"
                android:alpha="0.5"
                android:background="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtPopulation" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerSpecies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin_bottom"
                android:layout_marginBottom="@dimen/view_margin_bottom"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewDivider" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txtFilms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_margin"
            android:layout_marginTop="@dimen/view_margin"
            android:layout_marginEnd="@dimen/view_margin"
            android:text= "@string/movies"
            android:textColor="@android:color/white"
            android:textSize="@dimen/medium_double_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintDetails" />

        <ProgressBar
            android:id="@+id/progressMovie"
            android:layout_width="@dimen/view_dimension"
            android:layout_height="@dimen/view_dimension"
            android:layout_marginTop="@dimen/view_margin"
            android:layout_marginRight="@dimen/view_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintDetails" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerFilms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_margin_bottom"
            android:nestedScrollingEnabled="false"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtFilms" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>